--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,33 +1,41 @@
-.App {
+.container{
+  width: 100%;
+  height: 100%;
+}
+
+.header{
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.footer{
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a{
+  padding: 3px;
+  text-decoration-line: none;
+  color: black;
 }
-
-.App-link {
-  color: #61dafb;
+a:hover{
+  color: rgb(90, 125, 189);
+  text-decoration-line: underline;
 }
+.header-link{
+  background: rgb(189, 192, 192);
+}
+.post-area{
+  width: 80%;
+  margin-left: 10%;
+  text-align: center;
+}
+.single-post{
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 5px;
+  border: 1px;
+  border-style: dashed;
+  border-color: rgb(136, 136, 136);
+  text-align: initial;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.single-post h3{
+  text-align: center;
 }
