--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,41 +1,192 @@
-.container{
-  width: 100%;
-  height: 100%;
+.App {
+  text-align: center;
+  margin: 12px 44px 12px 44px
 }
 
-.header{
+.header-title{
   text-align: center;
 }
-.footer{
+
+.filters {
+  display: flex;
+  justify-content: space-around;
+  background: #fff;
+}
+
+.post {
+  display: flex;
+  -ms-align-items: center;
+  align-items: center;
+  position: relative;
+  padding: 5px;
+  justify-content: center;
+  background: rgb(226, 225, 225);
+  border: 1px solid;
+  margin: 1% 5%;
+}
+
+.comment {
+  display: flex;  
+  -ms-align-items: center;
+  align-items: flex-start;
+  position: relative;
+  margin: 16px 70px 10px 70px;
+  padding: 5px;
+  justify-content: flex-start;
+}
+
+.post-description {
+  flex: 1 0 auto;
+  padding: 0 10px;
+  text-align: left;
+}
+
+.post-likes-comments {
+  font-size: 14px;
+  margin-top: 12px;  
+  color: #2f2f2f
+}
+
+.post-likes {
+  display: flex;
+  margin-top: 12px;    
+  align-items: center;  
+}
+
+.post-title {
+  margin-top: 0;
   text-align: center;
 }
-a{
-  padding: 3px;
+
+.post-body p {
+  margin-bottom: 0;
+}
+.post-votes {
+  text-align: center;
+  padding: 10px;
+}
+.post-detail {
+  position: relative;
+}
+.post-author {
+  font-size: 14px;  
+  text-align: start;
+  margin-right: 6px;
+}
+
+
+.comment-author {
+  font-size: 12px;  
+  text-align: start;
+  margin-right: 6px;
+}
+
+.button-action {
+  display: flex;
+  flex-direction: row;
+  margin-left: 80px;
+}
+
+.link-category{
+  text-decoration: black;
   text-decoration-line: none;
-  color: black;
 }
-a:hover{
-  color: rgb(90, 125, 189);
-  text-decoration-line: underline;
-}
-.header-link{
-  background: rgb(189, 192, 192);
-}
-.post-area{
-  width: 80%;
-  margin-left: 10%;
-  text-align: center;
-}
-.single-post{
-  width: 80%;
-  margin-left: 10%;
-  margin-top: 5px;
-  border: 1px;
-  border-style: dashed;
-  border-color: rgb(136, 136, 136);
-  text-align: initial;
 
+
+.btn-category{
+  background: #fff;
+  padding: 10px;
+  display: inline;
+  
 }
-.single-post h3{
-  text-align: center;
+.btn-trash{
+  background: #fff;
+  display: inline;
+}
+
+.filter-post-sort{
+  display: flex;
+  justify-content: space-around;
+  background: #fff;
+}
+
+.comment {
+  height: 150px;
+  display: flex;
+  -ms-align-items: center;
+  align-items: center;
+  position: relative;
+  margin: 0 100px 10px 100px;
+  padding: 5px;
+  transition: all 1s ease;
+  justify-content: center;
+}
+
+.create-post-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.create-post-body {
+  -webkit-flex: 1 0 auto;
+  -moz-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  -o-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+
+.form-style-1 {
+  margin:10px auto;
+  max-width: 450px;
+  padding: 20px 12px 10px 20px;
+  font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+
+.form-style-1 li {
+  padding: 0;
+  display: block;
+  list-style: none;
+  margin: 10px 0 0 0;
+}
+.form-style-1 label{
+  margin:0 0 3px 0;
+  padding:0px;
+  display:block;
+  font-weight: bold;
+}
+.form-style-1 input[type=text],
+.form-style-1 input[type=date],
+.form-style-1 input[type=datetime],
+.form-style-1 input[type=number],
+.form-style-1 input[type=search],
+.form-style-1 input[type=time],
+.form-style-1 input[type=url],
+.form-style-1 input[type=email],
+textarea,
+select{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border:1px solid #BEBEBE;
+  padding: 7px;
+  margin:0px;
+  outline: none;
+}
+
+.form-style-1 .field-divided{
+  width: 49%;
+}
+
+.form-style-1 .field-long{
+  width: 100%;
+}
+.form-style-1 .field-select{
+  width: 100%;
+}
+.form-style-1 .field-textarea{
+  height: 100px;
+}
+
+.form-style-1 .required{
+  color:red;
 }
